@@ -1,12 +1,16 @@
-package bridge.generator.domain;
+package bridge.domain;
 
 import bridge.constant.BridgeSelection;
 import bridge.constant.ErrorMessage;
 import bridge.generator.BridgeMaker;
 import bridge.generator.BridgeRandomNumberGenerator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Bridge {
+
+    private static final int MIN_SIZE = 3;
+    private static final int MAX_SIZE = 20;
 
     private final List<BridgeSelection> bridge;
     private int index;
@@ -21,12 +25,12 @@ public class Bridge {
         List<String> rawBridge = bridgeMaker.makeBridge(size);
         List<BridgeSelection> bridge = rawBridge.stream()
                 .map(BridgeSelection::fromName)
-                .toList();
+                .collect(Collectors.toList());
         return new Bridge(bridge);
     }
 
     private void validateSize(List<BridgeSelection> bridge) {
-        if (bridge.size() < 3 || bridge.size() > 20) {
+        if (bridge.size() < MIN_SIZE || bridge.size() > MAX_SIZE) {
             throw new IllegalArgumentException(ErrorMessage.BRIDGE_SIZE_ERROR.getErrorMessage());
         }
     }
